--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p>What is the captial of India?</p>
+
+	<input type="radio" id="mumbai" value="mumbai">
+	<label>Mumbai</label>
+	<br/>
+	<input type="radio" id="delhi" value="delhi">
+	<label>Delhi</label>
+
+	<blockquote>
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
