--- a/main.html
+++ b/main.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 
-	<p>What is the captial of India?</p>
+  <p>What is the capital of India?</p>
 
-	<input type="radio" id="mumbai" value="mumbai">
-	<label>Mumbai</label>
-	<br/>
-	<input type="radio" id="delhi" value="delhi">
-	<label>Delhi</label>
+  <input type="radio" id="newdelhi" name="capital" value="newdelhi">
+  <label for="newdelhi">New Delhi</label>
+  <br/>
+  <input type="radio" id="mumbai" name="capital" value="mumbai">
+  <label for="mumbai">Mumbai</label>
 
-	<blockquote>
-		New Delhi is the capital of India and an administrative district of NCT Delhi.
-	</blockquote>
-	
-    <script type="text/javascript" src="./script.js">
-</script>
+  <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
+  </blockquote>
 
+  <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
